--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -20,6 +20,8 @@
             <li><a href="#" class="text-black">Únete a Nosotros</a></li>
             <p>|</p>
             <li><a routerLink="/login" class="text-black" (click)="redirectToLogin()">Iniciar Sesión</a></li>
+            <p>|</p>
+            <li><a routerLink="/cart" class="text-black font-semibold">Carrito</a></li>
         </ul>
     </div>
 </nav>
@@ -38,7 +40,7 @@
         <div>
             <a routerLink="/products" class="text-black font-semibold">PRODUCTOS</a>
         </div>
-        <div *ngIf="isAdmin">
+        <div>
             <a routerLink="/form" class="text-black font-semibold">ADMIN</a>
         </div>
     </div>
@@ -60,11 +62,32 @@
                 <path stroke="currentColor" stroke-width="1.5" d="M16.794 3.75c1.324 0 2.568.516 3.504 1.451a4.96 4.96 0 010 7.008L12 20.508l-8.299-8.299a4.96 4.96 0 010-7.007A4.923 4.923 0 017.205 3.75c1.324 0 2.568.516 3.504 1.451l.76.76.531.531.53-.531.76-.76a4.926 4.926 0 013.504-1.451"></path>
             </svg>
         </div>
-        <!-- Icono de bolsa de compra -->
-        <div>
+        <!-- Icono de bolsa de compra con modal trigger -->
+        <div (click)="openCartModal()">
             <svg aria-hidden="true" focusable="false" viewBox="0 0 24 24" role="img" width="24px" height="24px" fill="none">
                 <path stroke="currentColor" stroke-width="1.5" d="M8.25 8.25V6a2.25 2.25 0 012.25-2.25h3a2.25 2.25 0 110 4.5H3.75v8.25a3.75 3.75 0 003.75 3.75h9a3.75 3.75 0 003.75-3.75V8.25H17.5"></path>
             </svg>
         </div>
     </div>
 </nav>
+
+<!-- Modal para mostrar el carrito -->
+<div *ngIf="isCartModalOpen" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 z-50">
+    <div class="bg-white p-4 rounded-lg w-1/3">
+        <div class="flex justify-between items-center mb-4">
+            <h3 class="text-xl font-bold">Carrito de la Compra</h3>
+            <button (click)="closeCartModal()" class="text-red-500">Cerrar</button>
+        </div>
+        <div *ngIf="cartItems.length; else emptyCart">
+            <div *ngFor="let item of cartItems" class="border-b py-2">
+                <p><strong>{{ item.productName }}</strong></p>
+                <p>Referencia: {{ item.referenceNumber }}</p>
+                <p>Precio: {{ item.price }}</p>
+                <p>Cantidad: {{ item.quantity }}</p>
+            </div>
+        </div>
+        <ng-template #emptyCart>
+            <p>El carrito está vacío.</p>
+        </ng-template>
+    </div>
+</div>
